--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- The page supports only a dark color schemes -->
+    <meta name="color-scheme" content="dark">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Use your phone as a light painting torch"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Light Brush</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
